sleepybox-deployment.yaml

apiVersion: v1
kind: Pod
metadata:
  name: sleepybox1
  labels:
    app: sleepybox1
spec:
  containers:
  - name: sleepybox
    image: busybox
    command: ["/bin/sh", "-c"]
    args: ["sleep 3600"]
    
---

apiVersion: v1
kind: Pod
metadata:
  name: sleepybox2
spec:
  containers:
  - name: sleepybox
    image: busybox
    command: ["/bin/sh", "-c"]
    args: ["sleep 3600"]
